rustdocs/errors/rust-bitcoin-bitcoin-src-network-mod.rs.txt
error[E0432]: unresolved import `crate::pow`
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:65:12
   |
65 | use crate::pow::CompactTarget;
   |            ^^^ use of unresolved module or unlinked crate `pow`
   |
help: you might be missing a crate named `pow`, add it to your project and import it in your code
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:9:1
   |
 9 + extern crate pow;
   |

error[E0432]: unresolved import `crate::pow`
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:66:12
   |
66 | use crate::pow::Target;
   |            ^^^ use of unresolved module or unlinked crate `pow`
   |
help: you might be missing a crate named `pow`, add it to your project and import it in your code
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:9:1
   |
 9 + extern crate pow;
   |

error[E0432]: unresolved imports `crate::BlockHeight`, `crate::BlockHeightInterval`
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:67:13
   |
67 | use crate::{BlockHeight, BlockHeightInterval};
   |             ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^ no `BlockHeightInterval` in the root
   |             |
   |             no `BlockHeight` in the root

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:12:5
   |
12 | use core::str::FromStr;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:11:5
   |
11 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:14:5
   |
14 | use internals::write_err;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 9 + extern crate internals;
   |

error[E0432]: unresolved import `crate::constants`
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:18:12
   |
18 | use crate::constants::ChainHash;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `constants`
   |
help: you might be missing a crate named `constants`, add it to your project and import it in your code
   |
 9 + extern crate constants;
   |

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/bitcoin/src/network/mod.rs:19:12
   |
19 | use crate::prelude::{String, ToOwned};
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/bitcoin/src/network/mod.rs:315:6
    |
315 | impl TryFrom<ChainHash> for Network {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 11 + use std::convert::TryFrom;
    |

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
